# rg-azul

./: .editorconfig  .gitignore  404.html  Cargo.toml  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/: CODEOWNERS  FUNDING.yml  labels.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml  label-sync.yml
benches/: simple-bench.rs
benches/multi-file-bench/: bench_module.rs  main.rs
bevy-test/: Cargo.toml
bevy-test/src/: main.rs
client/: Cargo.toml
client/src/: graphics_systems.rs  main.rs
common/: Cargo.toml
common/src/: constant.rs  error.rs  lib.rs
common/src/ecs/: component.rs  mod.rs  system.rs
docs/: book.toml
docs/src/: 404.md  README.md  SUMMARY.md
docs/src/misc/: contributors.md
docs/src/user-guide/: basics.md  configuration.md  installation.md
examples/: simple.rs
examples/multi-file-example/: ex_module.rs  main.rs
misc/: contributors.html
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
tests/: some-integration-tests.rs
tests/multi-file-test/: main.rs  test_module.rs
user-guide/: basics.html  configuration.html  installation.html
