[package]
name = "rg-azul-common"
version = "0.0.1"
authors = ["Valentin Colin <valentin.colin78@gmail.com>"]
edition = "2021"
description = "Library of azul game (first edition)"
homepage = "https://github.com/rust-games/rg-azul.git"
repository = "https://github.com/rust-games/rg-azul.git"
license = "MIT"

[dependencies]
log = "0.4"
thiserror = "1"
bevy = "0.9"
bevy_renet = "0.0.6"
